refactor(media): complete combination
